# czech_air_quality

./: .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  run_tests.py  setup.cfg
.github/workflows/: publish.yml
docs/: requirements.txt
docs/source/: conf.py  custom_sitemap.xml  index.rst  robots.txt
docs/source/api/: exceptions.rst  index.rst  main.rst
src/: __init__.py  airquality.py  const.py  data_manager.py
src/czech_air_quality/: __init__.py  airquality.py  api.py  const.py  data_manager.py  processing.py
tests/: conftest.py  test_airquality.py  test_constants.py  test_data_manager.py  test_integration.py
