[metadata]
name = czech-air-quality
version = 0.0.1
author = chickendrop89
author_email = chickendrop89@gmail.com
description = A python library for retrieving and parsing air quality data from the chmi opendata portal.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/chickendrop89/czech-air-quality
license = LGPLv2.1
license_files = LICENSE
keywords = air-quality, chmi, czechia, pollution, aqi, geopy
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    requests>=2.28.0
    geopy>=2.3.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    coverage
    pylint
